# bootAI

./: .gitignore  README.md  call_function.py  pyproject.toml  test_get_files_info.py  test_run_python_file.py  test_write_file.py
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CODEX_INSTRUCTIONS.md  DESIGN_DECISIONS.md  DEVELOPMENT_GUIDE.md  MANUAL_TESTING.md  README.md  RELEASE_NOTES.md  REPORT_FORMAT.md  ROADMAP.md  SAFETY.md  STAGE_8_PRECHECK.md  WEB_ARCHITECTURE.md  WEB_THREAT_MODEL.md
functions/: get_files_info.py
tests/: test_application_artifact_service.py  test_application_review_from_scan.py  test_application_review_modules.py  test_application_review_service.py  test_application_review_web_session.py  test_application_scan_service.py  test_dependency_hygiene.py  test_duplicates.py  test_executor.py  test_grouping.py  test_html_report.py  test_llm_refinement.py  test_organization_apply.py  test_organization_review.py  test_organization_review_apply.py  test_organization_rules.py  test_organization_verify.py  test_pattern_inference.py  test_planner.py  test_reports.py  test_review.py  test_review_session.py  test_review_session_bulk.py  test_review_session_polish.py  test_review_session_resume.py  test_review_session_view.py  test_review_state.py  test_rule_audit.py  test_rule_review.py  test_safety.py  test_scanner.py  test_scope.py  test_web_app.py  test_web_attention_module.py  test_web_attention_workflow.py  test_web_config.py  test_web_consumer_formatting.py  test_web_consumer_home.py  test_web_consumer_navigation.py  test_web_dependency_hygiene.py  (+21 more)
(+104 files in other folders)
