[project]
name = "bootai"
version = "0.1.0"
description = "A cautious local file organizer with review-first, reversible workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
web = [
    "fastapi==0.139.0",
    "starlette==1.3.1",
    "uvicorn==0.50.2",
    "jinja2==3.1.6",
    "itsdangerous==2.2.0",
]
web-test = [
    "httpx==0.28.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"organizer.web" = [
    "templates/*.html",
    "static/THIRD_PARTY_NOTICES.txt",
    "static/css/*.css",
    "static/js/*.js",
    "static/vendor/*.css",
    "static/vendor/*.js",
]
